Update lab 8 index(1).html

--- a/lab 8 index(1).html
+++ b/lab 8 index(1).html
@@ -18,7 +18,7 @@
             background: whitesmoke;
             font-family: Lato, sans-serif;
             color: '#0D0000';
-            background-image: url(images/background.jpg)
+            background-image: url(Web-Map/background.jpg)
         }
         header {
             padding: 6px 10%;
