Update lab 8 index(1).html

--- a/lab 8 index(1).html
+++ b/lab 8 index(1).html
@@ -17,7 +17,7 @@
             padding: 0;
             background: whitesmoke;
             font-family: Lato, sans-serif;
-            color: '#0D0000';
+            color: '#c4d1d5';
             background-image: url(Web-Map/background.jpg)
         }
         header {
