Update lab 8 index(1).html

--- a/lab 8 index(1).html
+++ b/lab 8 index(1).html
@@ -18,7 +18,7 @@
             background: whitesmoke;
             font-family: Lato, sans-serif;
             color: '#c4d1d5';
-            background-image: url(Web-Map/background.jpg)
+            background-image: url(https://github.com/chrissno/Web-Map/blob/master/background.jpg)
         }
         header {
             padding: 6px 10%;
